# mokata-oss

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE_NOTES.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/mokata-check/: action.yml  example-pr-check.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
docs/: changelog.md  developer-guide.md  index.md  profiles.md  quickstart.md  security.md
docs/concepts/: execution-model.md  execution-modes.md  governance.md  knowledge.md  memory.md  pipeline.md  portable-sessions.md  token-governance.md
docs/how-to/: capture-project-rules-and-context.md  community-stacks.md  configure-a-profile.md  configure-storage-backends.md  first-run.md  install-mokata.md  install-plugin.md  integrate-other-ai-tools.md  mokata-as-a-pr-check.md  multi-project-shared-backend.md  portable-sessions.md  refine-existing-code.md  set-execution-mode.md  share-a-design-vault.md  share-a-stack.md  team-audit.md  team-setup.md  use-a-codebase-graph.md  use-memory.md  use-mokata-in-cowork.md  use-mokata-in-vs-code.md  use-the-plugin.md  use-with-other-agents.md  use-without-plugin.md  watch-a-run.md  write-a-skill.md
docs/marketing/: mokata-ad-script.md
docs/reference/: cli.md  command-surfaces.md  manifest.md  performance-budget.md  platform-support.md  skills.md  supply-chain.md
docs/tutorials/: catches-a-bad-change.md  differentiators-in-action.md  mokata-complete-guide.md  run-a-story.md
editors/vscode/: .vscodeignore  README.md  package.json  tsconfig.json
editors/vscode/mcp/: mokata.mcp.json
editors/vscode/src/: chat.ts  extension.ts  mokata.ts
hooks/: hooks.json  launch.sh  secret_guard.py  session_start.py
packaging/homebrew/: mokata.rb
scripts/: check-reproducible.sh  directory_listing.py  normalize_sdist.py  release-0.0.1.sh  release.sh
skills/brainstorm/: SKILL.md
skills/bug/: SKILL.md
skills/debug/: SKILL.md
skills/develop/: SKILL.md
skills/govern/: SKILL.md
skills/onboard/: SKILL.md
skills/optimize/: SKILL.md
skills/playbook/: SKILL.md
skills/refine/: SKILL.md
skills/review/: SKILL.md
skills/session/: SKILL.md
skills/ship/: SKILL.md
skills/spec/: SKILL.md
skills/test/: SKILL.md
src/mokata/: __init__.py  __main__.py  agent_skills.py  baseline.py  bootstrap.py  brainstorm.py  ci_check.py  cli.py  compose.py  config.py  config_cmd.py  crossplat.py  dashboard.py  detect.py  harness.py  harness_setup.py  hook_cli.py  init.py  languages.py  legibility.py  manifest.py  mcp_server.py  netguard.py  onboard.py  onboarding.py  packaging.py  parity.py  perf.py  pipeline.py  playbook.py  plugin_cache.py  profiles.py  progress.py  project.py  prompt.py  refine.py  router.py  schema.py  session_bundle.py  session_transport.py  (+10 more)
src/mokata/adapters/: __init__.py  contract.py  mcp.py  precedence.py
templates/: README.md  manifest.schema.json
templates/commands/: brainstorm.md  bug.md  chain.md  debug.md  decompose.md  develop.md  enter.md  exec.md  govern.md  init.md  onboard.md  optimize.md  playbook.md  progress.md  reconfigure.md  refine.md  resume.md  review.md  session.md  setup.md  ship.md  skill.md  spec.md  stacks.md  team.md  test.md  tour.md  upgrade.md  vault.md  version.md  watch.md
tests/: _support.py  test_acmapper.py  test_adapter_contract.py  test_agent_skills.py  test_anchors.py  test_authoring.py  test_bootstrap.py  test_brainstorm.py  test_brainstorm_grounding.py  test_brainstorm_persistence.py  test_cli_adapters.py  test_cli_brainstorm.py  test_cli_budget.py  test_cli_compose.py  test_cli_dist.py  test_cli_exec.py  test_cli_govern.py  test_cli_graph.py  test_cli_lifecycle.py  test_cli_memory.py  test_cli_preview.py  test_cli_query.py  test_command_templates.py  test_completeness_gate.py  test_compliance.py  test_compose.py  test_config.py  test_config_commit.py  test_consolidation.py  test_cross_platform_python.py  test_decision_observability.py  test_detect.py  test_docs_consistency.py  test_doctor.py  test_engine_phases.py  test_episodic.py  test_exec_orchestrator.py  test_exec_review.py  test_exec_selector.py  test_govern_commands_wiring.py  (+109 more)
tests/integration/: README.md  _support.py  test_govern_enforcement.py  test_live_db.py  test_matrix_profiles_modes.py  test_mcp_server.py  test_pipeline_e2e.py  test_progress.py  test_refine_handoff.py  test_resume.py  test_roundtrip_config.py  test_roundtrip_knowledge.py  test_roundtrip_memory.py  test_setup_harness.py
(+76 files in other folders)
